# YukikoSoftRasterizer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
case/Control/: CMakeLists  CMakeLists.txt  appControl.cc  appControl.hh  main.cc
case/Line/: CMakeLists  CMakeLists.txt  appLine.cc  appLine.hh  main.cc
case/Phong/: CMakeLists  CMakeLists.txt  appPhong.cc  appPhong.hh  main.cc
case/SSAO/: CMakeLists.txt  appSSAO.cc  appSSAO.hh  main.cc
src/: main.cc  softApp.cc  softApp.hh
src/app/: app.cc  app.hh
src/case/: appPhong.cc  appPhong.hh
src/case/Phong/: appPhong.cc  appPhong.hh  main.cc
src/control/: controls.cc  controls.hh  fpsControl.cc  fpsControl.hh
src/demo/: appMain.cc  appMain.hh  appPhong.cc  appPhong.hh
src/math/: math.hh  transform.cc  transform.hh
src/rasterizer/: vertex.cc  vertex.hh
src/renderer/: camera.cc  camera.hh  context.cc  context.hh  controller.cc  controller.hh  controls.cc  controls.hh  framebuffer.cc  framebuffer.hh  light.cc  light.hh  material.hh  mesh.cc  mesh.hh  rasterizer.cc  rasterizer.hh  renderpass.cc  renderpass.hh  scene.cc  scene.hh  shader.cc  shader.hh  texture.cc  texture.hh  triangle.cc  triangle.hh
src/window/: event.hh  eventDispatcher.cc  eventDispatcher.hh  window.cc  window.hh
